# network-potential-engine

./: .gitignore  README.md  demo_potential.py  pyproject.toml  requirements-dev.txt  requirements.txt
affinity/: Affinity_Value_and_Formula_Glossary.md
docs/: README.md  affinity_n50_pipeline_audit_and_debrief.md  bootstrap_local_ordering_theorem.md  certification_framework.md  how_to_run_affinity_v2_live_neo4j.md  tdc_local_ordering_theorem.md  tdc_local_ordering_theorem_formal.md  tdc_local_ordering_theorem_note.d  tdc_local_ordering_theorem_note.md  theorem_pipeline_bridge.md  verification_boundary.md
tests/: test-response.py  test_A1_tdc_derivative_objects_exist.py  test_A1_tdc_domain_and_well_definedness.py  test_A1_tdc_polynomial_regularity.py  test_A2_tdc_equilibrium_existence.py  test_A3_tdc_equilibrium_regularity.py  test_A3_tdc_interior_nondegeneracy.py  test_B1_tdc_hessian_coupling_identity.py  test_B2_tdc_tridiagonal_coupling_structure.py  test_C1_tdc_equilibrium_response_identity.py  test_D1_tdc_inverse_positivity.py  test_D2_tdc_mixed_block_positivity.py  test_D3_tdc_response_positivity.py  test_E1_tdc_region.py  test_E2_tdc_segment_certificate.py  test_E3_tdc_local_weak_ordering.py  test_S1_motif_cross_partials_tdc.py  test_S2_row_dominance_tdc.py  test_S3_mmatrix_tdc.py  test_affinity_pipeline_smoke.py  test_compute_node_energy.py  test_degroot.py  test_dynamic_network_evolution.py  test_effective_energy.py  test_endogenous_topology.py  test_equilibrium.py  test_feasible_relational_investment.py  test_gradient.py  test_graph_primitives.py  (+41 more)
(+313 files in other folders)
