[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-potential-engine"
version = "0.0.0"
dependencies = [
  "sympy>=1.12",
]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["network_potential_engine*"]
exclude = ["network-potential-engine*"]
